# ChangeLog for dev-python/audioread
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/audioread/ChangeLog,v 1.5 2013/06/08 14:45:36 sochotnicky Exp $

*audioread-1.0.1 (08 Jun 2013)

  08 Jun 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +audioread-1.0.1.ebuild,
  +files/0001-Use-the-print-function-instead-of-the-print-keyword.patch:
  Version bump, convert to EAPI5

  30 May 2012; Kacper Kowalik <xarthisius@gentoo.org> audioread-0.6.ebuild:
  Drop empty RESTRICT_PYTHON_ABIS, move all dependencies to RDEPEND

  29 May 2012; Jeff Horelick <jdhore@gentoo.org> audioread-0.6.ebuild:
  Keyword ~x86

  29 May 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  audioread-0.6.ebuild:
  Add forgotten python_abi support for dev-python/audioread

*audioread-0.6 (29 May 2012)

  29 May 2012; Stanislav Ochotnicky <sochotnicky@gentoo.org>
  +audioread-0.6.ebuild, +metadata.xml:
  New ebuild for Python module for decoding audio files
