@@ -6,22 +6,22 @@ DIST audioread-0.6.tar.gz 12278 SHA256 a26cce372ceb2f4136c162eb3ce6bbb56e983c7a3
 DIST audioread-1.0.1.tar.gz 13004 SHA256 19d1a8c55b00875235a198cb9119c2163394000ebbb0f05a074a356f71a96b04 SHA512 18e9e696785fe2f1b1d6ad7fe64e2878bf490d72aef7500998bb48b0733b382cf0b171d26c5b1465947de1d5f6ded25e2b57947402c31a440e8f346722fdc533 WHIRLPOOL 9489c01f54135677a01d2511d80150bd5f134b8b08ee20b55f78f708a788e604c282f43ea5ffbc669f2a00b3c2ae14f9062fe6752b21e14d1c50f4d36c3e2c6b
 EBUILD audioread-0.6.ebuild 823 SHA256 fd65491213fa08c719a2af7df4f9e3c16085e9313d44a56b3db9e6f9aa12e666 SHA512 81e2bbe72129c6a8d7849acb0a64f2e1b5f966bf0c950ce604d540670df4a32616418b7e29fd9778c73b5eff86f07bd8373dc27af5017c8761a030e2071db690 WHIRLPOOL 30e344637337a4f590ce157279d052b1f5cc1cf06ef996cac450fb655e0ff452686d3512b5844d6db597155919aef83e35bf4315919f64c559ff597f24a09706
 EBUILD audioread-1.0.1.ebuild 957 SHA256 e8aededce63ea3468684448c68526f7705f3fe98b6f418d87060f38525f94157 SHA512 599e19657f4376c90bc9860f3345afa0e314ebb17498a565cca21d766d4df1a568b4f81b1ab792d846e410af4f1f98b3da96a7d6e7281325e8b4ceef1065aae8 WHIRLPOOL 6d9ced8054ad4aad26539efcbaf9fc8fd0e674d04d4ca499879fc37e527dee8eecc8faacefb3601eca40cdc7748ce1040e1602536bc5eb881a2b909a369b0cef
-MISC ChangeLog 1011 SHA256 dce8c4241e8043892a05242ccf8493d50068d21a196ea3fbd7f175a3435e3e15 SHA512 502bfb83ad5a4214eb4a43cbd44867c85124dd138dd671ac54f62ad1cdcc8ac3c9d82f09aaf9250bfdf88ed508e95b686c7a8387751b962ce1f591ddc15e90dc WHIRLPOOL 9dae141d281eb4dca7beac5b7b86608ad4b1cb1c2610295df96f6a275bb37f15d3298f6f78b7f3c9ab92e510f241dc49e6f6f693f77e2da19d3b2b9e5acd78b9
-MISC metadata.xml 557 SHA256 30c6f511ebaf314db69b6d851b370989b7a5c6e38f388f0c56f259f848617f54 SHA512 17e73ae49f468fe1bf0e7f378b096a4458ffd2ef4e544f97174a3b124ae445307925aef5c3a6ef9758dc93605ffc22f65ae91fc8a741bb52d07140ecdcf1abf8 WHIRLPOOL 67db86ca91e94988a16188a0f68324a814b18c6ae2b014f9b8180b09aef2ccde27a37ee87c0df4d03071086225ec6b4b329dc15be53a15a7522160fc02389aea
+MISC ChangeLog 1115 SHA256 412a90c3be76ac4de5181b719f8e7f7182e27042cf76f51839f464b502a4d07d SHA512 ebce8150f76973eec0c924b5331e3e9de1ff81a3e37c94aa64253e1276923fcd5e775e863744b62a0132c87acfd16c9a8e2de3de9e97310daf4b28ffe16d6d42 WHIRLPOOL 3b563d01904ea246a6e9540ba456f990f291cb9223012aec0d7b533c7fbf040a6cab09e5f3d82a0af240355162b0aa62a86a70f3edc0d5475fd8042f31c87c90
+MISC metadata.xml 527 SHA256 40c85ddbd532c7d4296e46a44b354a8968f41595b46b74f2097e3fc928665e5f SHA512 640660d3f2eaa52ae33f1b84923f906c1a4af3993f10963c490ece1ea6e925f031ea951c9293abca7883a5bf098e6b7c5643676638410d8aa1cd10035678fa5c WHIRLPOOL 9debee5c20990c5c6be501d52b7d622ac3da0b24faebcbc27df1518f77ad709c836dc89f1227edb60f7acdbcafa02468fc2df20772f7d10f9f69e3ce8db3ba90
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRs0OVAAoJELy9dS57CHJB88gQAJQ4UjtOsU6dQUwT+KEf6fRu
-EYgcHu1eOYS2UPG7/WXyqWO5m+mMHnQuLMDUbDPIY6GKddhUJ3yvGoLjUtE7Zbv+
-lFAcGL2A6cj1uZxySidHfR8smbcURNOfrxKpcNquq6chNJKI5CkxWPusTGTX8Ogh
-9i60sHhV8P86kPinfbfkNB7Isy5Ilr+ug6Soc+S/aoP1I+keoZxU7YTHWDvoYv6J
-yX/ZvST3vQn4MJNbkR/ZfHVSQZEIC92/RIgWXkGjsaZxaVsVXhdh9NOwfM8WIFyG
-Ewm0omfPe9Ds3mpqohGHqm1jUhxukcnpWc+gXUVFDT750uZ82RownSDJzsnADFfb
-uBZgS5MuSMqcPd+iv2xT258tCWMSI3ZKW67aPvUos8JNapHod9w6in1+NgPtgkeq
-7a7l/aHrI3Va5Whxu/JIPXxcrr8zngAXj0C2I6lmj72eG9JGYev/4dqxqGNIdlzw
-eI+HTiZAQef7o5+PJrDkLOpeg2anGvibUD3EK0Iosn1dPVZzh68G0E8iRVV/fqgG
-EWpFyeCml/xiOtxtDi/wLR7YS5atJnbsuBe4UmtZxdwSNdmey39dKKO6E3GF3/js
-u1LHo5GrBVfEqAW8d7RzShY8GDd8G30ef8EU9ZL5+9gU5TTlzlSV0TKiZxDMKMar
-AF2jt0JA3dNYwELM9132
-=MpiL
+iQIcBAEBCAAGBQJSZBXiAAoJELy9dS57CHJB6B0P/jyB0NHzqe1zXB9JRd7H9ZWL
+BLUbHSTAnP1zwhpmKMKYN0tqNlrAMYSs4AZ/bdUJrVOIBOfk8aFD5Hl8U9uD2vkk
+YHRSd/Ig+os7ZC2sMUXPe7oxiKZAb6JbPHs+GcYURH2V9+UtjGplii7vFYdAX+1h
+uV3+ADpB7eVWM90JNmkDtEpEs2OOns7xwtfS3HjIFisSR4E3OhyxLgLC0mcP+TKK
+iLKZi2Rvxb2G0D5jRZdvF+P1oh2YMivlGn4qwysMYGbEmCKDfqnrZ0vYC06tz+uz
+gh51uF0SGjGHgR6TTp0ikAc0kP0NGQrnYWkSZ+3niiN07zZAOj2lrTSlhvJBrZDi
+DeYuP69QkhA8By9UVfARrCnJprA+fV93rFwGXpO7lnVTufQqjM8NL7MAwygjvFxn
+jyDcBcQiH36R1yoGovM/q9xk8sX3z3edyeuU8UDI4cq2vkjRd6EyiADn23LEEnFZ
+DckTK6xdl07RNszI5uos1X+j7Vd7fv3Zzrsmh+v+qvYG/qU7CUUpYH2aY4j/iDc9
+F1/2gcDZGCFgkDm2ZIZHPUCeFxrG9BNUsSBbKizw+0qpKt3niDkS0UVuXLgJuZct
++YsqSh/4/DaTJexUp7fFOmCK6c+zp/Q8xui4QrrYhAI1SaQiB8asVsp9sEo7FGtG
+QbUBG6E0cAOfgYDr4jYp
+=aLO/
 -----END PGP SIGNATURE-----
