@@ -3,10 +3,10 @@ DEPEND=selinux? ( sys-libs/libselinux ) pam? ( virtual/pam ) >=sys-apps/sed-4.0.
 DESCRIPTION=Paul Vixie's cron daemon, a fully featured crond implementation
 HOMEPAGE=ftp://ftp.isc.org/isc/cron/
 IUSE=selinux pam debug
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=ISC BSD-2 BSD
 RDEPEND=selinux? ( sys-libs/libselinux ) pam? ( virtual/pam ) >=sys-process/cronbase-0.3.2 !sys-process/bcron !sys-process/cronie !sys-process/dcron !sys-process/fcron
 SLOT=0
 SRC_URI=mirror://gentoo/vixie-cron-4.1.tar.bz2 mirror://gentoo/vixie-cron-4.1-gentoo-r4.patch.bz2
 _eclasses_=cron	18adefe7a7b2f043ca5b63e912835970	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	multilib	892e597faee02a5b94eb02ab512e7622	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	systemd	e80fe2d5b43ec0f0160c6e8ef931fa4c	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ee112aafd69eadffc440bc81de976330
+_md5_=25f2612715f2a3bb995bbbf072ed313d
