@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/audioread
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/audioread/ChangeLog,v 1.5 2013/06/08 14:45:36 sochotnicky Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/audioread/ChangeLog,v 1.6 2013/10/20 17:41:41 sochotnicky Exp $
+
+  20 Oct 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org> metadata.xml:
+  Move to maintainer-needed
 
 *audioread-1.0.1 (08 Jun 2013)
 
